# violet-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
editor/app/: CMakeLists.txt
editor/app/include/: editor.hpp  sample.hpp
editor/app/source/: editor.cpp  main.cpp  sample.cpp
editor/ui/: CMakeLists.txt
editor/ui/include/: component_view.hpp  editor_component.hpp  editor_data.hpp  editor_layout.hpp  hierarchy_view.hpp  render_view.hpp
editor/ui/source/: component_view.cpp  editor_layout.cpp  editor_ui.cpp  editor_view.cpp  hierarchy_view.cpp  render_view.cpp  scene_view.cpp
engine/: CMakeLists.txt
engine/algorithm/: CMakeLists.txt
engine/algorithm/private/: hash.cpp
engine/animation/: CMakeLists.txt
engine/animation/private/: animation_system.cpp
engine/assets/: CMakeLists.txt
engine/assets/config/: default.json
engine/assets/shaders/: brdf.hlsli  cluster.hlsli  color.hlsli  common.hlsli  copy_depth.hlsl  depth_only.hlsl  dithering.hlsl  fullscreen.hlsl  gbuffer.hlsli  gtao.hlsl  hzb.hlsl  hzb_trace.hlsli  mesh.hlsli  morphing.hlsl  motion_vector.hlsl  scan.hlsl  shadow.hlsl  shadow.hlsli  skybox.hlsl  spherical_harmonics.hlsli  ssgi.hlsl  taa.hlsl  tone_mapping.hlsl  ui.hlsl  utils.hlsli
engine/assets/textures/: stbn_scalar_2Dx1Dx1D_128x128x64x1.dds
engine/common/: CMakeLists.txt
engine/common/include/: assert.hpp  common_exports.hpp  dictionary.hpp  index_generator.hpp  log.hpp  type_trait.hpp  uuid.hpp
engine/common/private/: allocator.cpp  hash.cpp  log.cpp  utility.cpp
engine/common/source/: log.cpp
engine/core/: CMakeLists.txt
engine/core/include/: application.hpp  context.hpp  core_exports.hpp  event.hpp  link.hpp  plugin.hpp  relation.hpp  submodule.hpp  timer.hpp
engine/core/interface/: plugin_interface.hpp
engine/core/private/: engine.cpp  engine_context.cpp  engine_context.hpp  engine_module.cpp  engine_system.cpp  plugin.cpp
engine/core/source/: application.cpp  context.cpp  plugin.cpp  relation.cpp  submodule.cpp
engine/ecs/: CMakeLists.txt
engine/ecs/include/: archetype.hpp  archetype_manager.hpp  archetype_wrapper.hpp  component.hpp  component_handle.hpp  ecs.hpp  ecs_exports.hpp  entity.hpp  entity_record.hpp  hierarchies.hpp  hierarchy.hpp  storage.hpp  view.hpp  world.hpp
engine/ecs/private/: actor.cpp  archetype.cpp  archetype_chunk.cpp  archetype_chunk.hpp  view.cpp  world.cpp  world_command.cpp
engine/ecs/source/: archetype.cpp  archetype_manager.cpp  component.cpp  storage.cpp  world.cpp
engine/ecs_command/: CMakeLists.txt
engine/ecs_command/private/: ecs_command_system.cpp
engine/graphics/: CMakeLists.txt
engine/graphics/etc/: graphics.json
engine/graphics/include/: camera.hpp  config_parser.hpp  debug_pipeline.hpp  geometry.hpp  graphics.hpp  graphics_config.hpp  graphics_debug.hpp  graphics_exports.hpp  graphics_interface_helper.hpp  graphics_plugin.hpp  material.hpp  mesh.hpp  render_group.hpp  render_parameter.hpp  render_pipeline.hpp  skin_pipeline.hpp  skinned_mesh.hpp  standard_pipeline.hpp  texture.hpp  visual.hpp
engine/graphics/interface/: graphics_interface.hpp  new_graphics_interface.hpp
engine/graphics/private/: blinn_phong_pipeline.cpp  buffer.cpp  camera.cpp  camera_system.cpp  camera_system.hpp  dds.cpp  debug_drawer.cpp  environment_system.cpp  environment_system.hpp  geometry.cpp  geometry_manager.cpp  geometry_manager.hpp  gpu_buffer_uploader.cpp  gpu_buffer_uploader.hpp  graphics.cpp  graphics_config.cpp  graphics_context.cpp  graphics_debug.cpp  graphics_module.cpp  graphics_system.cpp  light.cpp  light_system.cpp  light_system.hpp  material.cpp  material_manager.cpp  material_manager.hpp  mesh_render.cpp  mesh_system.cpp  mesh_system.hpp  morph_target.cpp  node_parameter.cpp  pipeline.cpp  pipeline_parameter.cpp  render_context.cpp  render_device.cpp  render_pipeline.cpp  render_scene.cpp  render_scene_manager.cpp  render_scene_manager.hpp  renderer.cpp  (+15 more)
engine/graphics/source/: blinn_phong_pipeline.cpp  camera.cpp  config_parser.cpp  debug_pipeline.cpp  geometry.cpp  graphics.cpp  graphics_config.cpp  graphics_debug.cpp  graphics_interface_helper.cpp  graphics_plugin.cpp  light.cpp  mesh_render.cpp  pipeline.cpp  pipeline_parameter.cpp  render_group.cpp  render_pipeline.cpp  rhi.cpp  shadow_map.cpp  shadow_pipeline.cpp  skin_pipeline.cpp  skinning_pipeline.cpp  sky_pipeline.cpp  standard_pipeline.cpp  visual.cpp
engine/math/: CMakeLists.txt
engine/math/include/: euler.hpp  math.hpp  matrix.hpp  misc.hpp  orthogonal_matrix.hpp  perspective_matrix.hpp  quaternion.hpp  rotation_matrix.hpp  scaling_matrix.hpp  simd.hpp  type.hpp  vector.hpp
engine/misc/: CMakelists.txt
engine/misc/control/: CMakeLists.txt
engine/physics/: CMakeLists.txt
engine/physics/include/: joint.hpp  physics.hpp  physics_exports.hpp  physics_plugin.hpp  rigidbody.hpp
engine/physics/interface/: physics_interface.hpp
engine/physics/private/: joint.cpp  physics.cpp  physics_context.cpp  physics_debug.cpp  physics_debug.hpp  physics_module.cpp  physics_plugin.cpp  physics_plugin.hpp  physics_scene.cpp  physics_system.cpp  physics_world.cpp
engine/physics/source/: joint.cpp  physics.cpp  physics_plugin.cpp  rigidbody.cpp
engine/plugin/: CMakeLists.txt
engine/plugin/bullet3/: CMakeLists.txt
engine/plugin/d3d12/: CMakeLists.txt  draft.txt
engine/plugins/: CMakeLists.txt
engine/resource/: CMakeLists.txt
engine/scene/: CMakeLists.txt
engine/shader/: CMakelists.txt
engine/shader/hlsl/: ui.hlsl  (+5 more)
engine/shaders/: CMakeLists.txt
engine/task/: CMakeLists.txt
engine/tools/: CMakeLists.txt
engine/ui/: CMakeLists.txt
engine/window/: CMakeLists.txt
samples/base/: CMakeLists.txt
samples/bvh/: CMakeLists.txt
samples/cluster/: CMakeLists.txt
samples/ecs/: CMakeLists.txt
samples/hello-world/: CMakeLists.txt
samples/light/: CMakeLists.txt
samples/mesh-simplifier/: CMakeLists.txt
samples/mmd/: CMakeLists.txt
samples/mmd-viewer/: CMakeLists.txt
samples/pbr/: CMakeLists.txt
samples/physics/: CMakeLists.txt
(+1359 files in other folders)
