add_subdirectory(common)
add_subdirectory(core)
# add_subdirectory(graphics)
add_subdirectory(math)
# add_subdirectory(physics)
# add_subdirectory(resource)
# add_subdirectory(scene)
# add_subdirectory(ui)
# add_subdirectory(window)
# add_subdirectory(plugins)
# add_subdirectory(misc)
# add_subdirectory(shader)