if (MSVC)
    add_compile_options(/W3 /WX)
else()
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()

add_subdirectory(algorithm)
add_subdirectory(animation)
add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(ecs)
add_subdirectory(ecs_command)
add_subdirectory(graphics)
add_subdirectory(math)
add_subdirectory(physics)
add_subdirectory(plugins)
add_subdirectory(scene)
add_subdirectory(task)
add_subdirectory(toolkit)
# add_subdirectory(ui)
add_subdirectory(window)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/assets/ DESTINATION bin/assets)